starlark-rust/starlark/src/typing/golden/dot_type_1.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib tests
# ```

Code:
def foo(x: list.type) -> bool.type:
    return type(x) == []

def bar():
    foo(True)

Error:
error: Expected type `list[typing.Any]` but got `bool`
 --> filename:6:9
  |
6 |     foo(True)
  |         ^^^^
  |

Error:
error: Expected type `list[typing.Never]` but got `str`
 --> filename:3:12
  |
3 |     return type(x) == []
  |            ^^^^^^^^^^^^^
  |

Compiler typechecker (eval):
error: Expected type `list[typing.Any]` but got `bool`
 --> filename:6:9
  |
6 |     foo(True)
  |         ^^^^
  |
